--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-pro-sidebar",
+  "name": "@hepter/react-pro-sidebar",
   "version": "1.1.0-alpha.1",
   "description": "high level and customizable side navigation",
   "main": "dist/index.js",
@@ -7,8 +7,8 @@
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/azouaoui-med/react-pro-sidebar.git",
-  "author": "Mohamed Azouaoui <azouaoui.med@gmail.com>",
+  "repository": "https://github.com/hepter/react-pro-sidebar.git",
+  "author": "Mustafa Kuru <mustafaluru042@gmail.com>",
   "license": "MIT",
   "private": false,
   "scripts": {
